# bandhu

./: .gitignore  README.md  SPEC.md  bandhu-research-resources.md  render.yaml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 039e3fcaf65d_content_entries.py  6ba6658949c7_conversation_turns.py  766601b8952c_user_checkins.py  a1b2c3d4e5f6_redirect_templates.py  b2c3d4e5f6a7_helplines.py  c3d4e5f6a7b8_user_memory_summary.py  d4e5f6a7b8c9_evaluator_scores.py  dafaa4ec33cd_user_sessions.py  dfe53df3a579_safety_patterns.py
backend/app/: config.py  main.py
backend/app/clients/: claude.py  db.py  embeddings.py  llm.py  voyage.py
backend/app/jobs/: cleanup.py  scheduler.py
backend/app/middleware/: rate_limit.py  session.py
backend/app/models/: content_entries.py  conversation_turns.py  evaluator_scores.py  helplines.py  redirect_templates.py  safety_patterns.py  user_checkins.py  user_memory_summary.py  user_sessions.py
backend/app/pipeline/: orchestrator.py
backend/app/pipeline/stages/: classify.py  crisis_response.py  eligibility_gate.py  evaluator.py  generate.py  guardrail_check.py  ingest.py  memory_read.py  memory_write.py  orchestrator_judgment.py  redirect.py  retrieval.py  safety_gate.py  summarizer.py
backend/app/telemetry/: langfuse_setup.py
backend/scripts/: ingest_content.py  seed_helplines.py  seed_safety_patterns.py
docs/: CNAME  backend-architecture.html  backend-architecture.md  index.html  pipeline-v0.1.html  pipeline-v0.2.html  pipeline.html  qa-test-cases.html  rag-components.html  (+3 more)
(+26 files in other folders)
